# project_NVISIA

./: .gitignore  df_file_save.ipynb  geocoder.ipynb  llm_summarizer.ipynb  llm_to_db.ipynb  pyproject.toml  s_geocoding.ipynb  s_news_categorizer.ipynb  spn_rec.ipynb  test.ipynb
data/: test_geocoder.tsv
pickle/: s_news_cate_label_en.pkl  s_news_cate_model.pkl  s_news_cate_tfidf_labels.pkl  s_news_cate_tfidf_xcombined_vec.pkl
test_python_files/: dashboard_postgres_ver15.4.py  dashboard_postgres_ver15.py  dashboard_postgres_ver16.py  dashboard_postgres_ver2.py  geocoder.py  geocoder_ver2.py
test_python_files_csv/: LLMtoDatabase.py  dashboard_postgres_csv.py  geocoder_ver2_csv.py  knowledge_ver4_csv.py  rec_csv.py
발표자료/: NVISIA_발표자료16x9.pptx  NVISIA_발표자료4x3.pptx
