[project]
name = "project-nvsia"
version = "0.1.0"
description = ""
authors = [
    {name = "snhzyn",email = "sonhojin1202@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [

    "openai",
    "psycopg2",
    "ipykernel",
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
